--- a/config/west.yml
+++ b/config/west.yml
@@ -1,51 +1,37 @@
 manifest:
-  defaults:
-    revision: main
   remotes:
-    - name: cormoran
-      url-base: https://github.com/cormoran
+    - name: zmkfirmware
+      url-base: https://github.com/zmkfirmware
     - name: badjeff
       url-base: https://github.com/badjeff
     - name: hsgw
       url-base: https://github.com/hsgw
-    - name: caksoylar
-      url-base: https://github.com/caksoylar
+    - name: caksoylar  # <-- led
+      url-base: https://github.com/caksoylar  
 
   projects:
-    # ZMK: DYA Studio 用カスタム RPC サブシステム付き cormoran fork
+    # ZMK 本体。公式の app/west.yml を取り込む
     - name: zmk
-      remote: cormoran
-      revision: v0.3-branch+dya
+      remote: zmkfirmware
+      revision: v0.3
       import: app/west.yml
-
-    # DYA Studio モジュール（すべて cormoran リポジトリ）
-    - name: zmk-module-ble-management
-      remote: cormoran
-      revision: main
-    - name: zmk-module-battery-history
-      remote: cormoran
-      revision: main
-    - name: zmk-module-settings-rpc
-      remote: cormoran
-      revision: main
-    - name: zmk-module-runtime-input-processor
-      remote: cormoran
-      revision: main
 
     # PMW3610 ドライバ（外部モジュール）
     - name: zmk-pmw3610-driver
       remote: badjeff
       revision: zmk-0.3
-
+      # 置き場所を明示したい場合は path を指定（任意）
+      # path: modules/zmk-pmw3610-driver
+    
     # Sensor-rotation
     - name: zmk-feature-sensor_rotation
       remote: hsgw
       revision: main
 
     # LED
-    - name: zmk-rgbled-widget
+    - name: zmk-rgbled-widget  # <-- led
       remote: caksoylar
       revision: main
-
+      
   self:
     path: config
