--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,18 +52,25 @@ jobs:
   trigger-private-build:
     runs-on: ubuntu-latest
     needs: update-excluded-positions
-    if: always() && github.event_name == 'push'
+    if: |
+      always() && (
+        (github.event_name == 'push' && needs.update-excluded-positions.outputs.changed != 'true') ||
+        github.event_name == 'workflow_dispatch'
+      )
     steps:
+      - uses: actions/checkout@v4
+
       - name: Trigger kobitokey_private build
         run: |
+          SHA=$(git rev-parse HEAD)
           curl -X POST \
             -H "Authorization: token ${{ secrets.PRIVATE_REPO_PAT }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/tafuji-jn/kobitokey_private/dispatches \
-            -d '{
-              "event_type": "build_firmware",
-              "client_payload": {
-                "sha": "${{ github.sha }}",
-                "ref": "${{ github.ref }}"
+            -d "{
+              \"event_type\": \"build_firmware\",
+              \"client_payload\": {
+                \"sha\": \"$SHA\",
+                \"ref\": \"${{ github.ref }}\"
               }
-            }'
+            }"
